--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "zingchart": "~2.1.0"
+    "zingchart": "~2.1.0",
+    "font-awesome": "~4.3.0"
   }
 }
