--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "zingchart": "~2.1.0",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "underscore": "~1.8.3"
   }
 }
