History Works, Multi login works

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cse134b-cacheit/hw4",
   "dependencies": {
     "gh-pages": "^0.3.0",
+    "gulp-copy": "0.0.2",
     "gulp-live-server": "0.0.14"
   }
 }
